Move history back to simpler sliding window model